# clickhouse-cpp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
clickhouse/: CMakeLists.txt  client.cpp  client.h  protocol.h  query.cpp  query.h
clickhouse/base/: compressed.cpp  compressed.h  socket.cpp  socket.h  string_utils.h
clickhouse/columns/: array.cpp  date.cpp  date.h  decimal.cpp  decimal.h  factory.cpp  ipv4.cpp  ipv4.h  ipv6.cpp  ipv6.h  nullable.cpp  nullable.h  numeric.h
clickhouse/types/: type_parser.cpp  type_parser.h  types.cpp  types.h
cmake/: cpp17.cmake
tests/simple/: main.cpp
ut/: CMakeLists.txt  client_ut.cpp  columns_ut.cpp  socket_ut.cpp  type_parser_ut.cpp  types_ut.cpp
